# gearward

./: .env.example  .gitignore  README.md  agency-architecture-blueprint.md  pyproject.toml  render.yaml
backends/: __init__.py  evaluator_llm_judge.py  harness_langgraph.py  harness_managed.py  memory_postgres.py  routing.py
core/: __init__.py  evaluator.py  harness.py  memory.py  provenance.py  types.py
infra/: docker-compose.yml  migrate.py  schema.sql
infra/litellm/: Dockerfile  config.yaml
jobs/: __init__.py  refinement.py
modules/: __init__.py
modules/content/: __init__.py  graph.py
modules/content/nodes/: __init__.py  critic.py  generator.py  novelty_check.py  product_intelligence.py  publisher.py  research.py
modules/migration/: __init__.py  graph.py
modules/sales_training/: __init__.py  graph.py
