[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gearward"
version = "0.1.0"
description = "AI agency platform — one shared core, three service modules"
requires-python = ">=3.12"
dependencies = [
    # Model gateway
    "litellm>=1.50.0",
    # Agent harness
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # Anthropic (Managed Agents harness + Tier-2/3 models)
    "anthropic>=0.40.0",
    # Database
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.3.5",
    # Queue
    "redis>=5.0.0",
    # Observability
    "langfuse>=2.0.0",
    # Utilities
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "backends", "modules", "jobs"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
